--- a/59.Spring-Security-SessionManager/pom.xml
+++ b/59.Spring-Security-SessionManager/pom.xml
@@ -46,6 +46,7 @@
         <dependency>
             <groupId>org.springframework.session</groupId>
             <artifactId>spring-session</artifactId>
+            <version>1.3.5.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
